<?xml version="1.0"?>
<package format="2">
  <name>marker_publisher</name>
  <version>0.0.0</version>
  <description>The marker_publisher package</description>

  <maintainer email="jaouadhajj@gmail.com">jaouadros</maintainer>

  <license>TODO</license>

  <author email="jaouadhajj@gmail.com">jaouadros</author>
  <author email="hello@laure.nz">lalten</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>aruco</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

</package>
